--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,7 @@
 {
-  "name": "ESP-IDF Dev Container",
-  "image": "mcr.microsoft.com/devcontainers/devcontainer:latest",
-  "features": {
-    "ghcr.io/espressif/devcontainer/esp-idf-v5-1:1": {
-      "variant": "esp32"
-    }
-  },
-  "remoteUser": "vscode",
-  "settings": {
-    "espressif.espIdfPath": "/home/vscode/esp/esp-idf",
-    "espressif.toolsPath": "/home/vscode/esp/tools"
-  }
+  "name": "ESP-IDF",
+  "image": "espressif/idf:v5.1.2_esp32_full",
+  "remoteUser": "root",
+  "settings": {},
+  "postCreateCommand": "pip install --upgrade esptool"
 }
